Update privacy policy timestamp to trigger redeployment

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -224,4 +224,4 @@
         <p style="text-align: center; color: #7f8c8d; margin-top: 20px;">By using DealFlow Analytics, you agree to this Privacy Policy.</p>
     </div>
 </body>
-</html>
+</html><!-- Updated: Fri Aug 29 14:37:29 CEST 2025 -->
