Add complete monetization system with Stripe integration
- Added monetization.js for usage tracking and payments
- Integrated Stripe payment processing
- Added free/pro/premium/enterprise tiers
- Usage limits: Free (10), Pro (100), Premium (unlimited)
- Added payment endpoints to backend API
- Updated UI with usage indicator and upgrade prompts
- Test mode enabled for easy testing without real Stripe account

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -13,6 +13,17 @@
             <div class="status-indicator" id="status"></div>
         </header>
         
+        <!-- Usage Indicator -->
+        <div id="usage-bar" class="usage-bar">
+            <div class="usage-text">
+                <span id="usage-text">Loading...</span>
+                <button id="upgrade-btn" class="upgrade-btn hidden">Upgrade</button>
+            </div>
+            <div class="usage-progress">
+                <div id="usage-fill" class="usage-fill"></div>
+            </div>
+        </div>
+        
         <div id="loading" class="loading hidden">
             <div class="spinner"></div>
             <p>Analyzing company data...</p>
