--- a/extension/popup.html
+++ b/extension/popup.html
@@ -105,6 +105,7 @@
         </footer>
     </div>
     
+    <script src="js/monetization.js"></script>
     <script src="js/popup.js"></script>
 </body>
 </html>
